--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,11 @@
-name: esempio workflow
+name: Esempio workflow
+
 on: [push]
-jobs: 
-  build: 
-    runs -on: ubuntu-latest
-    steps: 
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
     - uses: actions/checkout@v2
     - name: Run a one-line script
       run: echo Hello, World!
